[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumenx-auto-reply-agent"
version = "0.1.0"
description = "Auto-reply LLM agent for the LumenX customer-support platform"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Niranjan R" }]
dependencies = [
    # Phase 0 — minimum to run the healthcheck
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "pydantic>=2.6",
    "truststore>=0.10",
    # Phase 3+ — agent service
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    # Phase 5 — feedback log
    "sqlalchemy>=2.0",
    # Phase 1 — LLM wiki vector store + local embeddings
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
    # Phase 7 — confidence net
    "torch>=2.2",
    "numpy>=1.26",
    # Phase 11 — in-process scheduler for retrain / cost-summary / alerts
    "apscheduler>=3.10,<4.0",
    # Dev
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["agent*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
